<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <RadioGroup
        android:id="@+id/encAlgSelRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/encAlgSelR1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:checked="true"
            android:text="@string/alg1">
        </RadioButton>

        <RadioButton
            android:id="@+id/encAlgSelR2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/alg2">
        </RadioButton>

        <RadioButton
            android:id="@+id/encAlgSelR3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/alg3">
        </RadioButton>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/encAlgKey"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:hint="@string/keyStr">
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:paddingLeft="20dp"
        android:id="@+id/encCTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outputStr1">
    </TextView>

    <EditText
        android:id="@+id/encOutText"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/blank"
        >
    </EditText>

    <Button
        android:id="@+id/encAlgSelBtn"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dip"
        android:text="@string/encryptStr">
    </Button>

</LinearLayout>